Wrapped logo and header text in a tags so now link back to home page correctly, small styling changes needed to bring forward in z-index here

--- a/resources/styles/home.scss
+++ b/resources/styles/home.scss
@@ -50,6 +50,7 @@ header {
     justify-content: center;
     width: 80%;
     margin-left: 10%;
+    z-index: 1;
 
     @include tablet() {
         justify-content: space-between;
@@ -68,6 +69,13 @@ header {
             font-size: 36px;
         }
     }
+
+    a {
+        cursor: pointer;
+        z-index: 1;
+        text-decoration: none;
+        color: $black;
+    }
 }
 
 .home-video {
@@ -76,6 +84,7 @@ header {
     margin-bottom: 0;
     padding: 0;
     margin-top: -20%;
+    z-index: -1;
 
     .video-text-1 {
         position: absolute;
